force-app/main/default/objects/Line_Item__c/Line_Item__c.object-meta.xml
<CustomObject>
    <label>Line Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>