force-app/main/default/objects/Line_Item__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <formula>Merchandise__r.Warehouse__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse</label>
    <type>Text</type>
</CustomField>