force-app/main/default/objects/Line_Item__c/fields/Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Name__c</fullName>
    <formula>Merchandise__r.Warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Name</label>
    <type>Text</type>
</CustomField>